...
                        }.foregroundColor(Color("PrimaryLabel"))
                        Spacer()
                    }
                    Spacer().frame(height: 8)
                    HStack{
                        Text("Register").font(.largeTitle.bold()).foregroundColor(Color("PrimaryLabel"))
                            .accessibilityIdentifier("RegisterViewRegisterText")
                        Spacer()
                    }
                    VStack(spacing: 10){
                        IconTextField(titleKey: "Name", text: $viewModel.name, icon: Image(systemName: "person"), foregroundColor: Color("PrimaryLabel")) { text in
                            return !(text.isEmpty || text == "")
                        }.accessibilityIdentifier("RegisterViewNameTextField")
...
