...
                        Image("login-image").resizable().scaledToFit().frame(width: min(g.size.width, g.size.height)*2/3, height:  min(g.size.width, g.size.height)*2/3)
                        Text("You have to be logged in to display this page").bold().foregroundColor(Color("PrimaryLabel"))
                        Button {
                            viewModel.displayLogin()
                        } label: {
                            Text("Login Now").bold().foregroundColor(Color("Primary"))
                        }.accessibilityIdentifier("TrackedViewLoginButton")
                    }.frame(width: g.size.width, height: g.size.height, alignment: .center)
                }
            } else {
                ZStack{
                    
                            GeometryReader{ geometry in
...
